refactor: Redução de linhas duplicadas NotificationUtil.java